wip for db modules

--- a/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: redhatcop.redhat.io/v1alpha1
 kind: PasswordPolicy
 metadata:
-  name: gitlabdb-password-policy
+  name: rdsdb-password-policy
   namespace: ${ARGOCD_ENV_vault_namespace}
 spec:
   # Add fields here
@@ -32,7 +32,7 @@ spec:
 apiVersion: redhatcop.redhat.io/v1alpha1
 kind: RandomSecret
 metadata:
-  name: gitlabdb-password
+  name: rdsdb-password
   namespace: ${ARGOCD_ENV_vault_namespace}
 spec:
   authentication:
@@ -41,10 +41,10 @@ spec:
     serviceAccount:
       name: default
   isKVSecretsEngineV2: true
-  path: /secret/data/gitlabdb
+  path: /secret/data/${ARGOCD_ENV_cluster_name}-${ARGOCD_ENV_dbdeploy_name_prefix}
   secretKey: password
   secretFormat:
-    passwordPolicyName: gitlabdb-password-policy
+    passwordPolicyName: rdsdb-password-policy
 ---
 apiVersion: redhatcop.redhat.io/v1alpha1
 kind: VaultSecret
