--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+resources:
+  - volumes-storageclass.yaml
 
 helmCharts:
   - name: aws-ebs-csi-driver
