--- a/gitops/applications/base/netbird-pre/netbird-random-secrets.yaml
+++ b/gitops/applications/base/netbird-pre/netbird-random-secrets.yaml
@@ -10,4 +10,16 @@ spec:
       encoding: "hex"
       length: "32"
 ---
+apiVersion: "secretgenerator.mittwald.de/v1alpha1"
+kind: "StringSecret"
+metadata:
+  name: "${ARGOCD_ENV_netbird_relay_secret}"
+  namespace: "${ARGOCD_ENV_netbird_namespace}"
+spec:
+  forceRegenerate: false
+  fields:
+    - fieldName: "${ARGOCD_ENV_netbird_relay_secret_key}"
+      encoding: "hex"
+      length: "32"
+---
 
