--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -25,6 +25,11 @@ management:
           }
         ]
       },
+      "Relay": {
+        "Addresses": ["rels://netbird.${ARGOCD_ENV_netbird_dns_subdomain}:443/relay"],
+        "CredentialsTTL": "24h",
+        "Secret": "{{ .RELAY_PASSWORD }}"
+      },
       "Signal": {
         "Proto": "https",
         "URI": "netbird.${ARGOCD_ENV_netbird_dns_subdomain}:443",
@@ -141,6 +146,11 @@ management:
         secretKeyRef:
           name: ${ARGOCD_ENV_netbird_datastore_encryption_key_secret}
           key: ${ARGOCD_ENV_netbird_datastore_encryption_key_secret_key}
+    - name: RELAY_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: ${ARGOCD_ENV_netbird_relay_secret}
+          key: ${ARGOCD_ENV_netbird_relay_secret_key}
 
   podCommand:
     args:
@@ -156,7 +166,7 @@ signal:
   ingress:
     enabled: false
 relay:
-  enabled: false
+  enabled: true
   image:
     tag: ${ARGOCD_ENV_netbird_image_version}
   ingress:
