--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -171,8 +171,12 @@ relay:
     tag: ${ARGOCD_ENV_netbird_image_version}
   ingress:
     enabled: false
+  service:
+    port: 80
   env:
-    NB_EXPOSED_ADDRESS: rels://netbird.${ARGOCD_ENV_netbird_dns_subdomain}:443
+    NB_EXPOSED_ADDRESS: "rels://netbird.${ARGOCD_ENV_netbird_dns_subdomain}:443"
+    NB_AUTH_SECRET: RELAY_PASSWORD
+    NB_LISTEN_ADDRESS: ":80"
 dashboard:
   enabled: true
   ingress:
