--- a/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
@@ -49,7 +49,7 @@ spec:
 apiVersion: redhatcop.redhat.io/v1alpha1
 kind: VaultSecret
 metadata:
-  name: gitlab-gitlabdb-secret
+  name: ${ARGOCD_ENV_db_secret}
   namespace: ${ARGOCD_ENV_vault_namespace}
 spec:
   refreshPeriod: 1m0s
@@ -59,15 +59,15 @@ spec:
         role: ${ARGOCD_ENV_vault_k8s_admin_role_name}
         serviceAccount:
           name: default
-      name: dynamicsecret_gitlabdb_password
-      path: /secret/data/gitlabdb/gitlabdb-password
+      name: dynamicsecret_db_password
+      path: /secret/data/${ARGOCD_ENV_dbdeploy_name_prefix}/rdsdb-password
   output:
-    name: ${ARGOCD_ENV_gitlab_db_secret}
+    name: ${ARGOCD_ENV_db_secret}
     stringData:
-      password: "{{ .dynamicsecret_gitlabdb_password.password }}"
+      password: "{{ .dynamicsecret_db_password.password }}"
     type: Opaque
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "${ARGOCD_ENV_gitlab_namespace}"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "${ARGOCD_ENV_namespace}"
       reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true" # Auto create reflection for matching namespaces
-      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "${ARGOCD_ENV_gitlab_namespace}"
+      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "${ARGOCD_ENV_namespace}"
