--- a/gitops/applications/overlays/rdbms_provider/percona/db/db-external-name-service.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/db-external-name-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ${ARGOCD_ENV_gitlab_externalservice_name}
-  namespace: "${ARGOCD_ENV_gitlab_namespace}"
+  name: ${ARGOCD_ENV_externalservice_name}
+  namespace: "${ARGOCD_ENV_namespace}"
 spec:
-  externalName: ${ARGOCD_ENV_gitlab_dbdeploy_name_prefix}-pgbouncer.${ARGOCD_ENV_gitlab_namespace}.svc.cluster.local
+  externalName: ${ARGOCD_ENV_dbdeploy_name_prefix}-pgbouncer.${ARGOCD_ENV_namespace}.svc.cluster.local
   sessionAffinity: None
   type: ExternalName
