--- a/gitops/argo-apps/base/maintenance-post-config.yaml
+++ b/gitops/argo-apps/base/maintenance-post-config.yaml
@@ -32,18 +32,9 @@ spec:
   sources:
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_maintenance_application_gitrepo_tag}
-      path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_cloud_provider}/maintenance-post-config
+      path: gitops/applications/base/maintenance-post-config
       plugin:
         name: envsubst
         env:
-          - name: "object_storage_region"
-            value: "${ARGOCD_ENV_maintenance_velero_object_storage_region}"
-
-          - name: "object_storage_secret_name"
-            value: "${ARGOCD_ENV_maintenance_velero_object_storage_secret_name}"
-
-          - name: "object_storage_secret_key"
-            value: "${ARGOCD_ENV_maintenance_velero_object_storage_secret_key}"
-
-          - name: "object_storage_bucket"
-            value: "${ARGOCD_ENV_maintenance_velero_object_storage_bucket}"
+          - name: "storage_location"
+            value: "${ARGOCD_ENV_maintenance_velero_object_storage_default_name}"
